--- a/Proposal/document.bib
+++ b/Proposal/document.bib
@@ -79,7 +79,7 @@
   publisher={MIT press}
 }
 
-@article{bizer2009linked,
+@article{bizer2009linkedfull,
   title={Linked data-the story so far},
   author={Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
   journal={International journal on semantic web and information systems},
@@ -87,6 +87,16 @@
   number={3},
   pages={1--22},
   year={2009}
+}
+
+@article{bizer2009linked,
+	title={Linked data-the story so far},
+	author={Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
+	journal={{IJSWIS}},
+	volume={5},
+	number={3},
+	pages={1--22},
+	year={2009}
 }
 
 @inproceedings{kramer2000bottom,
@@ -122,7 +132,7 @@ pages = {331-339}
 }
 
 @article{hoffart2013yago2,
-  title={YAGO2: a spatially and temporally enhanced knowledge base from Wikipedia},
+  title={{YAGO2}: a spatially and temporally enhanced knowledge base from {W}ikipedia},
   author={Hoffart, Johannes and Suchanek, Fabian M and Berberich, Klaus and Weikum, Gerhard},
   journal={Artificial Intelligence},
   volume={194},
@@ -186,7 +196,7 @@ pages = {331-339}
 
 @article{Wu:1981:CST:1013228.511759,
  author = {Wu, Harry and Salton, Gerard},
- title = {A Comparison of Search Term Weighting: Term Relevance vs. Inverse Document Frequency},
+ title = {A Comparison of Search Term Weighting: Term Relevance {vs}. Inverse Document Frequency},
  journal = {SIGIR Forum},
  issue_date = {Summer 1981},
  volume = {16},
@@ -256,7 +266,7 @@ pages = {331-339}
   year={2012}
 }
 
-@inproceedings{cheng2011automated,
+@inproceedings{cheng2011automatedfull,
   title={Automated feature generation from structured knowledge},
   author={Cheng, Weiwei and Kasneci, Gjergji and Graepel, Thore and Stern, David and Herbrich, Ralf},
   booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
@@ -265,13 +275,31 @@ pages = {331-339}
   organization={ACM}
 }
 
-@inproceedings{paulheim2012unsupervised,
+@inproceedings{cheng2011automated,
+	title={Automated feature generation from structured knowledge},
+	author={Cheng, Weiwei and Kasneci, Gjergji and Graepel, Thore and Stern, David and Herbrich, Ralf},
+	booktitle={{CIKM'11}},
+	pages={1395--1404},
+	year={2011},
+	organization={ACM}
+}
+
+@inproceedings{paulheim2012unsupervisedfull,
   title={Unsupervised generation of data mining features from linked open data},
   author={Paulheim, Heiko and F{\"u}mkranz, Johannes},
   booktitle={Proceedings of the 2nd international conference on web intelligence, mining and semantics},
   pages={31},
   year={2012},
   organization={ACM}
+}
+
+@inproceedings{paulheim2012unsupervised,
+	title={Unsupervised generation of data mining features from linked open data},
+	author={Paulheim, Heiko and F{\"u}mkranz, Johannes},
+	booktitle={WIMS'12},
+	pages={31},
+	year={2012},
+	organization={ACM}
 }
 
 @article{markovitch2002feature,
@@ -422,7 +450,7 @@ pages = {331-339}
   title={Linear machine decision trees},
   author={Utgo, Paul E and Brodley, Carla E},
   year={1991},
-  institution={Citeseer}
+  institution={University of Massachusetts at Amherst}
 }
 
 @article{jarmasz2004roget,
@@ -443,7 +471,7 @@ pages = {331-339}
 }
 
 @incollection{losch2012graph,
-  title={Graph kernels for RDF data},
+  title={Graph kernels for {RDF} data},
   author={L{\"o}sch, Uta and Bloehdorn, Stephan and Rettinger, Achim},
   booktitle={The Semantic Web: Research and Applications},
   pages={134--148},
@@ -470,7 +498,7 @@ pages = {331-339}
 }
 
 @article{bengio2009learning,
-  title={Learning deep architectures for AI},
+  title={Learning deep architectures for {AI}},
   author={Bengio, Yoshua},
   journal={Foundations and trends{\textregistered} in Machine Learning},
   volume={2},
@@ -487,7 +515,7 @@ pages = {331-339}
   year={2014}
 }
 
-@inproceedings{plotz2011feature,
+@inproceedings{plotz2011featurefull,
   title={Feature learning for activity recognition in ubiquitous computing},
   author={Pl{\"o}tz, Thomas and Hammerla, Nils Y and Olivier, Patrick},
   booktitle={IJCAI Proceedings-International Joint Conference on Artificial Intelligence},
@@ -497,13 +525,32 @@ pages = {331-339}
   year={2011}
 }
 
-@inproceedings{kim2013deep,
+@inproceedings{plotz2011feature,
+	title={Feature learning for activity recognition in ubiquitous computing},
+	author={Pl{\"o}tz, Thomas and Hammerla, Nils Y and Olivier, Patrick},
+	booktitle={IJCAI Proceedings},
+	volume={22},
+	number={1},
+	pages={1729},
+	year={2011}
+}
+
+@inproceedings{kim2013deepfull,
   title={Deep learning for robust feature generation in audiovisual emotion recognition},
   author={Kim, Yelin and Lee, Honglak and Provost, Emily Mower},
   booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
   pages={3687--3691},
   year={2013},
   organization={IEEE}
+}
+
+@inproceedings{kim2013deep,
+	title={Deep learning for robust feature generation in audiovisual emotion recognition},
+	author={Kim, Yelin and Lee, Honglak and Provost, Emily Mower},
+	booktitle={ICASSP 2013},
+	pages={3687--3691},
+	year={2013},
+	organization={IEEE}
 }
 
 @inproceedings{davis2005view,
@@ -515,10 +562,19 @@ pages = {331-339}
 	organization={Citeseer}
 }
 
-@inproceedings{gabrilovich2004text,
-	title={Text categorization with many redundant features: Using aggressive feature selection to make SVMs competitive with C4. 5},
+@inproceedings{gabrilovich2004textfull,
+	title={Text categorization with many redundant features: Using aggressive feature selection to make SVMs competitive with {C}4. 5},
 	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
 	booktitle={Proceedings of the twenty-first international conference on Machine learning},
+	pages={41},
+	year={2004},
+	organization={ACM}
+}
+
+@inproceedings{gabrilovich2004text,
+	title={Text categorization with many redundant features: Using aggressive feature selection to make SVMs competitive with {C}4. 5},
+	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
+	booktitle={ICML},
 	pages={41},
 	year={2004},
 	organization={ACM}
@@ -550,4 +606,46 @@ pages = {331-339}
 	pages={273--297},
 	year={1995},
 	publisher={Springer}
+}
+
+@inproceedings{bunescu2006using,
+	title={Using Encyclopedic Knowledge for Named entity Disambiguation.},
+	author={Bunescu, Razvan C and Pasca, Marius},
+	booktitle={EACL},
+	volume={6},
+	pages={9--16},
+	year={2006}
+}
+
+@article{cheng2013relationalorig,
+	title={Relational Inference for {W}ikification},
+	author={Cheng, Xiao and Roth, Dan},
+	journal={Urbana},
+	volume={51},
+	pages={61801},
+	year={2013}
+}
+
+@inproceedings{cheng2013relational,
+	title={Relational Inference for {w}ikification},
+	author={Cheng, Xiao and Roth, Dan},
+	booktitle={Proc. of EMNLP},
+	pages={1787--1796},
+	year={2013}
+}
+
+@article{gabrilovich2009wikipediafull,
+	title={Wikipedia-based semantic interpretation for natural language processing},
+	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
+	journal={Journal of Artificial Intelligence Research},
+	pages={443--498},
+	year={2009}
+}
+
+@article{gabrilovich2009wikipedia,
+	title={Wikipedia-based semantic interpretation for natural language processing},
+	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
+	journal={JAIR},
+	pages={443--498},
+	year={2009}
 }
